--- a/Tuxbar/Tuxbar.Api/Tuxbar.Api.csproj
+++ b/Tuxbar/Tuxbar.Api/Tuxbar.Api.csproj
@@ -9,7 +9,8 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.0-preview.7.23375.9" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+    <PackageReference Include="Tuxboard.Core" Version="1.4.0" />
   </ItemGroup>
 
 </Project>
