--- a/.gitignore
+++ b/.gitignore
@@ -363,3 +363,23 @@ MigrationBackup/
 FodyWeavers.xsd
 /Tuxbar/Tuxbar.Api/Properties/launchSettings.json
 /Tuxbar/Tuxbar.Web/Properties/launchSettings.json
+/DragWidgets/DragWidgets.Web/wwwroot/js
+/DragWidgets/DragWidgets.Web/wwwroot/css
+/DragWidgets/DragWidgets.Web/wwwroot/lib
+/DragWidgets/DragWidgets.Web/wwwroot/src/tuxboard/dto/dragWidgetInfo.js
+/DragWidgets/DragWidgets.Web/wwwroot/src/tuxboard/dto/PlacementItem.js
+/DragWidgets/DragWidgets.Web/wwwroot/src/tuxboard/dto/settingValue.js
+/DragWidgets/DragWidgets.Web/wwwroot/src/tuxboard/dto/tuxMessageType.js
+/DragWidgets/DragWidgets.Web/wwwroot/src/tuxboard/dto/tuxViewMessage.js
+/DragWidgets/DragWidgets.Web/wwwroot/src/tuxboard/dto/WidgetProperties.js
+/DragWidgets/DragWidgets.Web/wwwroot/src/tuxboard/models/Column.js
+/DragWidgets/DragWidgets.Web/wwwroot/src/tuxboard/models/columnCollection.js
+/DragWidgets/DragWidgets.Web/wwwroot/src/tuxboard/models/layout.js
+/DragWidgets/DragWidgets.Web/wwwroot/src/tuxboard/models/LayoutRow.js
+/DragWidgets/DragWidgets.Web/wwwroot/src/tuxboard/models/layoutRowCollection.js
+/DragWidgets/DragWidgets.Web/wwwroot/src/tuxboard/models/tab.js
+/DragWidgets/DragWidgets.Web/wwwroot/src/tuxboard/widget/widgetCollection.js
+/DragWidgets/DragWidgets.Web/wwwroot/src/tuxboard/widget/widgetPlacement.js
+/DragWidgets/DragWidgets.Web/wwwroot/src/tuxboard/common.js
+/DragWidgets/DragWidgets.Web/wwwroot/src/tuxboard/tuxboard.js
+/DragWidgets/DragWidgets.Web/wwwroot/src/dashboard.js
