--- a/.gitignore
+++ b/.gitignore
@@ -361,25 +361,23 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
-/Tuxbar/Tuxbar.Api/Properties/launchSettings.json
-/Tuxbar/Tuxbar.Web/Properties/launchSettings.json
-/DragWidgets/DragWidgets.Web/wwwroot/js
-/DragWidgets/DragWidgets.Web/wwwroot/css
-/DragWidgets/DragWidgets.Web/wwwroot/lib
-/DragWidgets/DragWidgets.Web/wwwroot/src/tuxboard/dto/dragWidgetInfo.js
-/DragWidgets/DragWidgets.Web/wwwroot/src/tuxboard/dto/PlacementItem.js
-/DragWidgets/DragWidgets.Web/wwwroot/src/tuxboard/dto/settingValue.js
-/DragWidgets/DragWidgets.Web/wwwroot/src/tuxboard/dto/tuxMessageType.js
-/DragWidgets/DragWidgets.Web/wwwroot/src/tuxboard/dto/tuxViewMessage.js
-/DragWidgets/DragWidgets.Web/wwwroot/src/tuxboard/dto/WidgetProperties.js
-/DragWidgets/DragWidgets.Web/wwwroot/src/tuxboard/models/Column.js
-/DragWidgets/DragWidgets.Web/wwwroot/src/tuxboard/models/columnCollection.js
-/DragWidgets/DragWidgets.Web/wwwroot/src/tuxboard/models/layout.js
-/DragWidgets/DragWidgets.Web/wwwroot/src/tuxboard/models/LayoutRow.js
-/DragWidgets/DragWidgets.Web/wwwroot/src/tuxboard/models/layoutRowCollection.js
-/DragWidgets/DragWidgets.Web/wwwroot/src/tuxboard/models/tab.js
-/DragWidgets/DragWidgets.Web/wwwroot/src/tuxboard/widget/widgetCollection.js
-/DragWidgets/DragWidgets.Web/wwwroot/src/tuxboard/widget/widgetPlacement.js
-/DragWidgets/DragWidgets.Web/wwwroot/src/tuxboard/common.js
-/DragWidgets/DragWidgets.Web/wwwroot/src/tuxboard/tuxboard.js
-/DragWidgets/DragWidgets.Web/wwwroot/src/dashboard.js
+
+/DragWidgets/DragWidgets.Web/wwwroot/js/**/*
+/DragWidgets/DragWidgets.Web/wwwroot/css/**/*
+/DragWidgets/DragWidgets.Web/wwwroot/lib/**/*
+/DragWidgets/DragWidgets.Web/wwwroot/src/**/*.js
+
+/Tuxbar/Tuxbar.Web/wwwroot/js/**/*
+/Tuxbar/Tuxbar.Web/wwwroot/css/**/*
+/Tuxbar/Tuxbar.Web/wwwroot/lib/**/*
+/Tuxbar/Tuxbar.Web/wwwroot/src/**/*.js
+
+/SimpleDashboard/wwwroot/js/**/*
+/SimpleDashboard/wwwroot/css/**/*
+/SimpleDashboard/wwwroot/lib/**/*
+/SimpleDashboard/wwwroot/src/**/*.js
+
+/WidgetsExample/wwwroot/js/**/*
+/WidgetsExample/wwwroot/css/**/*
+/WidgetsExample/wwwroot/lib/**/*
+/WidgetsExample/wwwroot/src/**/*.js
