--- a/Tuxbar/Tuxbar.Api/Tuxbar.Api.csproj
+++ b/Tuxbar/Tuxbar.Api/Tuxbar.Api.csproj
@@ -8,9 +8,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.0-preview.7.23375.9" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
-    <PackageReference Include="Tuxboard.Core" Version="1.4.0" />
+    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.5" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
+    <PackageReference Include="Tuxboard.Core" Version="1.5.1" />
   </ItemGroup>
 
 </Project>
