--- a/.gitignore
+++ b/.gitignore
@@ -366,19 +366,23 @@ FodyWeavers.xsd
 /Tuxbar/Tuxbar.Web/wwwroot/css/**/*
 /Tuxbar/Tuxbar.Web/wwwroot/lib/**/*
 /Tuxbar/Tuxbar.Web/wwwroot/src/**/*.js
+/Tuxbar/Tuxbar.Web/Properties/launchsettings.json
 
 /01-SimpleDashboard/wwwroot/js/**/*
 /01-SimpleDashboard/wwwroot/css/**/*
 /01-SimpleDashboard/wwwroot/lib/**/*
 /01-SimpleDashboard/wwwroot/src/**/*.js
+/01-SimpleDashboard/Properties/launchsettings.json
 
 /02-WidgetsExample/wwwroot/js/**/*
 /02-WidgetsExample/wwwroot/css/**/*
 /02-WidgetsExample/wwwroot/lib/**/*
 /02-WidgetsExample/wwwroot/src/**/*.js
+/02-WidgetsExample/Properties/launchsettings.json
 
 /03-DragWidgets/wwwroot/js/**/*
 /03-DragWidgets/wwwroot/css/**/*
 /03-DragWidgets/wwwroot/lib/**/*
 /03-DragWidgets/wwwroot/src/**/*.js
+/03-DragWidgets/Properties/launchSettings.json
 
