--- a/04-Tuxbar/appsettings.json
+++ b/04-Tuxbar/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "TuxboardConfig": {
-    "ConnectionString": "Data Source=localhost;Initial Catalog=DragWidgets;Integrated Security=True;MultipleActiveResultSets=True;TrustServerCertificate=True",
+    "ConnectionString": "Data Source=localhost;Initial Catalog=Tuxbar;Integrated Security=True;MultipleActiveResultSets=True;TrustServerCertificate=True",
     "Schema": "dbo",
     "WidgetFolder": "/Pages/Shared/{0}.cshtml",
     "ViewFolder": "/Pages/{1}/{0}.cshtml",
