Remove paths from other appsettings

--- a/01-SimpleDashboard/appsettings.json
+++ b/01-SimpleDashboard/appsettings.json
@@ -9,9 +9,6 @@
   "AllowedHosts": "*",
   "TuxboardConfig": {
     "ConnectionString": "Data Source=localhost;Initial Catalog=SimpleDashboard;Integrated Security=True;MultipleActiveResultSets=True;TrustServerCertificate=True",
-    "Schema": "dbo",
-    "WidgetFolder": "/Pages/Shared/{0}.cshtml",
-    "ViewFolder": "/Pages/{1}/{0}.cshtml",
-    "ComponentFolder": "/Pages/Shared/{0}"
+    "Schema": "dbo"
   }
 }
