--- a/.gitignore
+++ b/.gitignore
@@ -397,3 +397,9 @@ FodyWeavers.xsd
 /05-Layout-1/wwwroot/lib/**/*
 /05-Layout-1/wwwroot/src/**/*.js
 /05-Layout-1/Properties/launchSettings.json
+
+/06-Layout-2/wwwroot/js/**/*
+/06-Layout-2/wwwroot/css/**/*
+/06-Layout-2/wwwroot/lib/**/*
+/06-Layout-2/wwwroot/src/**/*.js
+/06-Layout-2/Properties/launchSettings.json
