--- a/07-Add-Widgets/appsettings.json
+++ b/07-Add-Widgets/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "TuxboardConfig": {
-    "ConnectionString": "Data Source=localhost;Initial Catalog=Layout_2;Integrated Security=True;MultipleActiveResultSets=True;TrustServerCertificate=True",
+    "ConnectionString": "Data Source=localhost;Initial Catalog=Add_Widgets;Integrated Security=True;MultipleActiveResultSets=True;TrustServerCertificate=True",
     "Schema": "dbo"
   }
 }
