Update Identity Naming

--- a/10-Default-Dashboards/10-Default-Dashboards.csproj
+++ b/10-Default-Dashboards/10-Default-Dashboards.csproj
@@ -20,4 +20,8 @@
     <PackageReference Include="Tuxboard.Core" Version="1.6.5" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Data\Migrations\TuxboardContext\" />
+  </ItemGroup>
+
 </Project>
