--- a/10-Default-Dashboards/10-Default-Dashboards.csproj
+++ b/10-Default-Dashboards/10-Default-Dashboards.csproj
@@ -21,6 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Data\Migrations\Identity\" />
     <Folder Include="Data\Migrations\TuxboardContext\" />
   </ItemGroup>
 
