Update default dashboard seeding data

--- a/10-Default-Dashboards/appsettings.json
+++ b/10-Default-Dashboards/appsettings.json
@@ -4,6 +4,7 @@
   },
   "TuxboardConfig": {
     "ConnectionString": "Data Source=localhost;Initial Catalog=10-Default-Dashboards;Integrated Security=True;MultipleActiveResultSets=True;TrustServerCertificate=True",
+    "CreateSeedData": true,
     "Schema": "dbo"
   },
   "Logging": {
