--- a/12-Creating-Widgets/12-Creating-Widgets.csproj
+++ b/12-Creating-Widgets/12-Creating-Widgets.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
-    <RootNamespace>DefaultWidgets</RootNamespace>
+    <RootNamespace>CreatingWidgets</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
