- Bug: Create CDN for SimpleDashboard Example - Bug: Configuration not properly injected - Bug: Add CreateSeedData property not on earlier demos

--- a/03-DragWidgets/appsettings.json
+++ b/03-DragWidgets/appsettings.json
@@ -9,6 +9,7 @@
   "AllowedHosts": "*",
   "TuxboardConfig": {
     "ConnectionString": "Data Source=localhost;Initial Catalog=DragWidgets;Integrated Security=True;MultipleActiveResultSets=True;TrustServerCertificate=True",
-    "Schema": "dbo"
+    "Schema": "dbo",
+    "CreateSeedData": true
   }
 }
