--- a/05-Layout-1/appsettings.json
+++ b/05-Layout-1/appsettings.json
@@ -9,6 +9,7 @@
   "AllowedHosts": "*",
   "TuxboardConfig": {
     "ConnectionString": "Data Source=localhost;Initial Catalog=Layout_1;Integrated Security=True;MultipleActiveResultSets=True;TrustServerCertificate=True",
-    "Schema": "dbo"
+    "Schema": "dbo",
+    "CreateSeedData": true
   }
 }
