--- a/08-Widget-Toolbar/appsettings.json
+++ b/08-Widget-Toolbar/appsettings.json
@@ -9,6 +9,7 @@
   "AllowedHosts": "*",
   "TuxboardConfig": {
     "ConnectionString": "Data Source=localhost;Initial Catalog=Widget_Toolbar;Integrated Security=True;MultipleActiveResultSets=True;TrustServerCertificate=True",
-    "Schema": "dbo"
+    "Schema": "dbo",
+    "CreateSeedData": true
   }
 }
