--- a/09-User-Dashboard/appsettings.json
+++ b/09-User-Dashboard/appsettings.json
@@ -4,6 +4,7 @@
   },
   "TuxboardConfig": {
     "ConnectionString": "Data Source=localhost;Initial Catalog=09-User-Dashboard;Integrated Security=True;MultipleActiveResultSets=True;TrustServerCertificate=True",
+    "CreateSeedData": true,
     "Schema": "dbo"
   },
   "Logging": {
