--- a/02-WidgetsExample/Dockerfile
+++ b/02-WidgetsExample/Dockerfile
@@ -12,4 +12,4 @@ RUN dotnet publish -c Release -o out
 FROM mcr.microsoft.com/dotnet/aspnet:8.0
 WORKDIR /App
 COPY --from=build-env /App/out .
-ENTRYPOINT ["dotnet", "01-SimpleDashboard.dll"]
+ENTRYPOINT ["dotnet", "02-WidgetsExample.dll"]
