--- a/12-Creating-Widgets/12-Creating-Widgets.csproj
+++ b/12-Creating-Widgets/12-Creating-Widgets.csproj
@@ -25,6 +25,7 @@
   <ItemGroup>
     <Folder Include="Data\Migrations\TuxboardContext\" />
     <Folder Include="Properties\" />
+    <Folder Include="wwwroot\css\" />
   </ItemGroup>
 
 </Project>
